fix: footer container alignmet on mobile vp

--- a/css/blog.css
+++ b/css/blog.css
@@ -195,7 +195,7 @@ footer {
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .footer-container {
